--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:attiny88]
+;[env:env_custom_uploader]
+;platform = atmelavr
+;extra_scripts = upload.py
+;custom_option = hello
+
+;[env:myenv]
+;platform = atmelavr
+;framework = arduino
+;board = attiny88
+;upload_protocol = usbasp
+
+[env:env_custom_uploader]
 platform = atmelavr
+extra_scripts = upload.py
+custom_option = hello
 board = attiny88
 framework = arduino
